# paste

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/: 20220516021429_pastes.up.sql
src/: main.rs
